feat(system): enhancements
