# docs/swagger.json
@@ -36,6 +36,18 @@
                         "description": "Filter by division ID",
                         "name": "division_id",
                         "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Max number of results (default 50, max 500)",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of results to skip (default 0)",
+                        "name": "offset",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -415,6 +427,18 @@
                         "type": "string",
                         "description": "Filter to date (YYYY-MM-DD)",
                         "name": "to",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Max number of transactions (default 50, max 500)",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of transactions to skip (default 0)",
+                        "name": "offset",
                         "in": "query"
                     }
                 ],
